fixed annoying maven issue